--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 }
@@ -17,9 +21,9 @@ h3 {
 }
 
 p {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 300;
-  line-height: 1.36;
+  line-height: 1.4;
   text-align: left;
   color: #4a4a4a;
   padding-left: 5px;
@@ -29,10 +33,22 @@ img {
   margin-top: 20px;
 }
 
+button {
+  text-transform: uppercase;
+  padding: 10px 20px;
+  outline: none;
+}
+
 footer {
   display: flex;
   align-items: center;
   height: 50px;
+}
+
+form {
+  padding: 0;
+  margin: 0;
+  border: none;
 }
 
 
@@ -63,6 +79,7 @@ main {
   background-size: cover;
   text-align: center;
 }
+
 main h1 {
   font-size: 45px;
 }
@@ -70,9 +87,54 @@ main h1 {
 /* SEARCH BOX */
 
 .search-box {
-  background: rgba(255,255,255, .5);
+  --white: #fff;
+  --light-grey: #f5f5f5;
+  --med-grey: #aaa;
+  --dark-grey: #555;
+  --test-pink: pink;
+  --trans: .3s;
+
   display: flex;
+  justify-content: center;
+  color: #444;
+  font-size: 16px;
+  margin: 20px auto;
 }
+
+.search-box input {
+  height: 40px;
+  min-width: 350px;
+  outline: none;
+  background: none;
+  border: none;
+  padding-left: 10px;
+}
+
+.search-box button {
+  border: 1px solid var(--med-grey);
+  background: #fff;
+  color: var(--med-grey);
+  transition: var(--trans);
+  height: 100%;
+}
+
+.search-box button:hover {
+  cursor: pointer;
+  border: 1px solid var(--dark-grey);
+  color: var(--dark-grey);
+}
+
+.search-box form {
+  background: var(--light-grey);
+  padding: 4px 5px;
+}
+
+.search-box input:active,
+.search-box input:focus {
+  background: var(--white);
+  transition: var(--trans);
+}
+
 
 
 
@@ -158,33 +220,6 @@ main h1 {
   display: flex;
   justify-content: space-around;
   min-height: 350px;
-}
-
-#city {
-  width: 286px;
-  height: 46px;
-  border-radius: 4px;
-  border: solid 2.5px #ffffff;
-  background-color: inherit;
-  opacity: 0.73;
-  font-size: 18px;
-  line-height: 1;
-  letter-spacing: 0.4px;
-  text-align: left;
-  color: #ffffff;
-}
-
-#button {
-  width: 140px;
-  height: 46px;
-  border-radius: 4px;
-  background-color: #27b7c1;
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 0.94;
-  letter-spacing: 0.5px;
-  text-align: center;
-  color: #ffffff;
 }
 
 
