--- a/public/style.css
+++ b/public/style.css
@@ -265,11 +265,16 @@ form:focus-within {
   visibility: hidden;
 }
 
-#destination {
-  font-size: 30px;
-  font-weight: 600;
+
+.location-heading {
+  color: var(--brand-color);
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.location-subheading {
+  color: var(--med-grey);
   letter-spacing: var(--letterspacing-sm);
-  text-align: left;
-  color: #27b7c1;
+  font-size: 1rem;
 }
 
