Added api call feature to detect location and return closest city name

--- a/public/style.css
+++ b/public/style.css
@@ -268,3 +268,9 @@ form:focus-within {
   margin: 20px auto;
   visibility: hidden;
 }
+
+
+/* Shame CSS */
+.find-my-location {
+  cursor: pointer;
+}
